# hw7-regression

./: README.md  Untitled.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: pytest.yml
regression/: logreg.py
test/: test_logreg.py
